fixed direction change and size reduction bug